@startuml global-class-knowledge-platform
title Global domain class diagram — principal entities

skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam classFontSize 12
skinparam classFontName Arial
skinparam defaultFontName Arial
skinparam packageStyle rectangle
skinparam packageFontStyle plain
skinparam ArrowColor #000000
skinparam ClassBorderColor #000000
skinparam ClassBackgroundColor #FFFFFF
skinparam ClassHeaderBackgroundColor #F2F2F2
skinparam PackageBorderColor #000000
skinparam PackageBackgroundColor #FFFFFF
skinparam EnumBackgroundColor #FFFFFF
skinparam linetype ortho
hide circle
left to right direction

enum RoleName <<enumeration>> {
  ADMIN
  MANAGER
  EMPLOYEE
}

enum DepartmentAccessLevel <<enumeration>> {
  MEMBER
  MANAGER
  VIEWER
}

enum DocumentVisibility <<enumeration>> {
  ALL
  DEPARTMENT
  PRIVATE
}

enum DocumentProcessingStatus <<enumeration>> {
  PENDING
  PROCESSING
  READY
  FAILED
}

package "Identity and access" {
  class Role {
    id : UUID
    name : RoleName
    description : String [0..1]
  }

  class Department {
    id : UUID
    name : String
    parentDepartmentId : UUID [0..1]
  }

  class User {
    id : UUID
    name : String
    email : String
    roleId : UUID
    departmentId : UUID
    isActive : Boolean
  }

  class UserDepartmentAccess {
    id : UUID
    userId : UUID
    departmentId : UUID
    accessLevel : DepartmentAccessLevel
  }
}

package "Document library" {
  class Document {
    id : UUID
    title : String
    description : String [0..1]
    createdById : UUID
    departmentId : UUID [0..1]
    visibility : DocumentVisibility
    isArchived : Boolean
  }

  class DocumentVersion {
    id : UUID
    documentId : UUID
    versionNumber : Integer
    fileName : String
    storageKey : String
    processingStatus : DocumentProcessingStatus
  }

  class DocumentChunk {
    id : UUID
    documentVersionId : UUID
    chunkIndex : Integer
    content : String
    embedding : Vector
  }

  class DocumentTag {
    id : UUID
    name : String
  }
}

package "Conversations and feedback" {
  class Conversation {
    id : UUID
    userId : UUID
    title : String
  }

  class ConversationMessage {
    id : UUID
    conversationId : UUID
    role : String
    content : String
    sources : JSON [0..1]
  }

  class AnswerFeedback {
    id : UUID
    messageId : UUID
    userId : UUID
    rating : String
    comment : String [0..1]
  }
}

Role ..> RoleName
UserDepartmentAccess ..> DepartmentAccessLevel
Document ..> DocumentVisibility
DocumentVersion ..> DocumentProcessingStatus

Role "1" <-- "0..*" User
Department "1" <-- "0..*" User : primary department
User "1" o-- "0..*" UserDepartmentAccess
Department "1" o-- "0..*" UserDepartmentAccess
Department "0..1" <-- "0..*" Department : parent

User "1" <-- "0..*" Document : created by
Department "0..1" <-- "0..*" Document
Document "1" *-- "1..*" DocumentVersion
DocumentVersion "1" *-- "0..*" DocumentChunk
Document "0..*" -- "0..*" DocumentTag

User "1" *-- "0..*" Conversation
Conversation "1" *-- "0..*" ConversationMessage
ConversationMessage "1" o-- "0..1" AnswerFeedback
User "1" <-- "0..*" AnswerFeedback

note bottom of DocumentChunk
  DocumentChunk stores passage text and
  embeddings used by hybrid retrieval (RAG).
end note

note as N1
  **Scope.** Principal domain entities only.
  Secondary persistence entities (sessions,
  audit logs, favourites, notifications)
  appear in Annex~D.
end note

@enduml
